--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.1",
-    "antd": "^5.21.5",
-    "less": "^4.2.0",
-    "less-loader": "^12.2.0",
+    "@nextui-org/react": "^2.4.8",
+    "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
@@ -23,7 +21,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
