--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,6 +23,15 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Cache build files
+        uses: actions/cache@v3
+        with:
+          path: .next/cache
+          key: build-cache-${{ github.ref }}-${{ hashFiles('package.json', 'pnpm-lock.yaml') }}
+          restore-keys: |
+            build-cache-${{ github.ref }}-
+            build-cache-
+
       - name: Build
         run: pnpm run build
 
