--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,6 +31,15 @@ jobs:
       - name: Build
         run: pnpm run build
 
+      - name: Cache build files
+        uses: actions/cache@v3
+        with:
+          path: .next/cache
+          key: build-cache-${{ github.ref }}-${{ hashFiles('package.json', 'pnpm-lock.yaml') }}
+          restore-keys: |
+            build-cache-${{ github.ref }}-
+            build-cache-
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
