--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-only-warn": "^1.1.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
